semantic-analyzer/src/syn.output
Grammar

    0 $accept: program $end

    1 program: lst_declarations
    2        | %empty

    3 lst_declarations: declaration lst_declarations
    4                 | declaration

    5 declaration: func_declaration
    6            | var_declaration
    7            | error

    8 $@1: %empty

    9 func_declaration: unq_declaration $@1 '(' parameters ')' '{' block_commands '}'

   10 var_declaration: unq_declaration ';'

   11 unq_declaration: type ID

   12 parameters: lst_parameters
   13           | %empty

   14 lst_parameters: unq_declaration ',' lst_parameters
   15               | unq_declaration

   16 calling_parameters: lst_calling_parameters
   17                   | %empty

   18 lst_calling_parameters: operation ',' lst_calling_parameters
   19                       | operation

   20 block_commands: command block_commands
   21               | command

   22 command: var_declaration
   23        | init_variable
   24        | conditional_stmt
   25        | return_stmt
   26        | iteration
   27        | input
   28        | output

   29 $@2: %empty

   30 command: $@2 '{' block_commands '}'
   31        | operation ';'
   32        | error

   33 init_variable: init_stmt ';'

   34 conditional_stmt: IF_STMT '(' operation ')' command
   35                 | IF_STMT '(' operation ')' command ELSE_STMT command

   36 return_stmt: RETURN_STM operation ';'

   37 iteration: FOR_STMT '(' loop_condition ')' command

   38 loop_condition: init_stmt ';' operation ';' update_stmt

   39 init_stmt: ID '=' operation

   40 update_stmt: init_stmt
   41            | %empty

   42 output: OUTPUT_WRITE '(' operation ')' ';'
   43       | OUTPUT_WRITELN '(' operation ')' ';'
   44       | OUTPUT_WRITE '(' STRING ')' ';'
   45       | OUTPUT_WRITELN '(' STRING ')' ';'

   46 input: INPUT_READ '(' expression ')' ';'

   47 func_calling: ID '(' calling_parameters ')'

   48 expression: func_calling
   49           | single_operation
   50           | const
   51           | ID

   52 const: number
   53      | NIL_CNST

   54 number: NUM_INT
   55       | NUM_FLOAT

   56 type: type_lst
   57     | type_number

   58 type_lst: type_number T_LIST

   59 type_number: T_INT
   60            | T_FLOAT

   61 operation: arith_binary
   62          | lst_binary
   63          | operation relational_op expression
   64          | operation logical_op expression

   65 single_operation: arith_single
   66                 | lst_single
   67                 | '!' expression

   68 arith_binary: arith_binary '+' expression
   69             | arith_binary '-' expression
   70             | arith_binary '*' expression
   71             | arith_binary '/' expression
   72             | expression

   73 arith_single: '+' expression
   74             | '-' expression

   75 lst_single: '%' expression
   76           | '?' expression

   77 lst_binary: expression FILTER expression
   78           | expression MAP expression
   79           | expression ':' expression

   80 logical_op: AND
   81           | OR

   82 relational_op: GREATER
   83              | GREATER_EQ
   84              | LESS
   85              | LESS_EQ
   86              | EQUAL
   87              | NOT_EQ


Terminals, with rules where they appear

    $end (0) 0
    '!' <token> (33) 67
    '%' <token> (37) 75
    '(' <token> (40) 9 34 35 37 42 43 44 45 46 47
    ')' <token> (41) 9 34 35 37 42 43 44 45 46 47
    '*' <token> (42) 70
    '+' <token> (43) 68 73
    ',' <token> (44) 14 18
    '-' <token> (45) 69 74
    '/' <token> (47) 71
    ':' <token> (58) 79
    ';' <token> (59) 10 31 33 36 38 42 43 44 45 46
    '=' <token> (61) 39
    '?' <token> (63) 76
    '{' <token> (123) 9 30
    '}' <token> (125) 9 30
    error (256) 7 32
    NUM_INT <token> (258) 54
    NUM_FLOAT <token> (259) 55
    STRING <token> (260) 44 45
    NIL_CNST <token> (261) 53
    ID <token> (262) 11 39 47 51
    RETURN_STM <token> (263) 36
    T_INT <token> (264) 59
    T_FLOAT <token> (265) 60
    T_LIST <token> (266) 58
    IF_STMT <token> (267) 34 35
    ELSE_STMT <token> (268) 35
    FOR_STMT <token> (269) 37
    OUTPUT_WRITE <token> (270) 42 44
    OUTPUT_WRITELN <token> (271) 43 45
    INPUT_READ <token> (272) 46
    AND <token> (273) 80
    OR <token> (274) 81
    GREATER <token> (275) 82
    GREATER_EQ <token> (276) 83
    LESS <token> (277) 84
    LESS_EQ <token> (278) 85
    EQUAL <token> (279) 86
    NOT_EQ <token> (280) 87
    FILTER <token> (281) 77
    MAP <token> (282) 78


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program <node> (44)
        on left: 1 2
        on right: 0
    lst_declarations <node> (45)
        on left: 3 4
        on right: 1 3
    declaration <node> (46)
        on left: 5 6 7
        on right: 3 4
    func_declaration <node> (47)
        on left: 9
        on right: 5
    $@1 (48)
        on left: 8
        on right: 9
    var_declaration <node> (49)
        on left: 10
        on right: 6 22
    unq_declaration <node> (50)
        on left: 11
        on right: 9 10 14 15
    parameters <node> (51)
        on left: 12 13
        on right: 9
    lst_parameters <node> (52)
        on left: 14 15
        on right: 12 14
    calling_parameters <node> (53)
        on left: 16 17
        on right: 47
    lst_calling_parameters <node> (54)
        on left: 18 19
        on right: 16 18
    block_commands <node> (55)
        on left: 20 21
        on right: 9 20 30
    command <node> (56)
        on left: 22 23 24 25 26 27 28 30 31 32
        on right: 20 21 34 35 37
    $@2 (57)
        on left: 29
        on right: 30
    init_variable <node> (58)
        on left: 33
        on right: 23
    conditional_stmt <node> (59)
        on left: 34 35
        on right: 24
    return_stmt <node> (60)
        on left: 36
        on right: 25
    iteration <node> (61)
        on left: 37
        on right: 26
    loop_condition <node> (62)
        on left: 38
        on right: 37
    init_stmt <node> (63)
        on left: 39
        on right: 33 38 40
    update_stmt <node> (64)
        on left: 40 41
        on right: 38
    output <node> (65)
        on left: 42 43 44 45
        on right: 28
    input <node> (66)
        on left: 46
        on right: 27
    func_calling <node> (67)
        on left: 47
        on right: 48
    expression <node> (68)
        on left: 48 49 50 51
        on right: 46 63 64 67 68 69 70 71 72 73 74 75 76 77 78 79
    const <node> (69)
        on left: 52 53
        on right: 50
    number <node> (70)
        on left: 54 55
        on right: 52
    type <node> (71)
        on left: 56 57
        on right: 11
    type_lst <node> (72)
        on left: 58
        on right: 56
    type_number <node> (73)
        on left: 59 60
        on right: 57 58
    operation <node> (74)
        on left: 61 62 63 64
        on right: 18 19 31 34 35 36 38 39 42 43 63 64
    single_operation <node> (75)
        on left: 65 66 67
        on right: 49
    arith_binary <node> (76)
        on left: 68 69 70 71 72
        on right: 61 68 69 70 71
    arith_single <node> (77)
        on left: 73 74
        on right: 65
    lst_single <node> (78)
        on left: 75 76
        on right: 66
    lst_binary <node> (79)
        on left: 77 78 79
        on right: 62
    logical_op <node> (80)
        on left: 80 81
        on right: 64
    relational_op <node> (81)
        on left: 82 83 84 85 86 87
        on right: 63


State 0

    0 $accept: • program $end

    error    shift, and go to state 1
    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    $end  reduce using rule 2 (program)

    program           go to state 4
    lst_declarations  go to state 5
    declaration       go to state 6
    func_declaration  go to state 7
    var_declaration   go to state 8
    unq_declaration   go to state 9
    type              go to state 10
    type_lst          go to state 11
    type_number       go to state 12


State 1

    7 declaration: error •

    $end     reduce using rule 7 (declaration)
    error    reduce using rule 7 (declaration)
    T_INT    reduce using rule 7 (declaration)
    T_FLOAT  reduce using rule 7 (declaration)


State 2

   59 type_number: T_INT •

    ID      reduce using rule 59 (type_number)
    T_LIST  reduce using rule 59 (type_number)


State 3

   60 type_number: T_FLOAT •

    ID      reduce using rule 60 (type_number)
    T_LIST  reduce using rule 60 (type_number)


State 4

    0 $accept: program • $end

    $end  shift, and go to state 13


State 5

    1 program: lst_declarations •

    $end  reduce using rule 1 (program)


State 6

    3 lst_declarations: declaration • lst_declarations
    4                 | declaration •

    error    shift, and go to state 1
    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    $end  reduce using rule 4 (lst_declarations)

    lst_declarations  go to state 14
    declaration       go to state 6
    func_declaration  go to state 7
    var_declaration   go to state 8
    unq_declaration   go to state 9
    type              go to state 10
    type_lst          go to state 11
    type_number       go to state 12


State 7

    5 declaration: func_declaration •

    $end     reduce using rule 5 (declaration)
    error    reduce using rule 5 (declaration)
    T_INT    reduce using rule 5 (declaration)
    T_FLOAT  reduce using rule 5 (declaration)


State 8

    6 declaration: var_declaration •

    $end     reduce using rule 6 (declaration)
    error    reduce using rule 6 (declaration)
    T_INT    reduce using rule 6 (declaration)
    T_FLOAT  reduce using rule 6 (declaration)


State 9

    9 func_declaration: unq_declaration • $@1 '(' parameters ')' '{' block_commands '}'
   10 var_declaration: unq_declaration • ';'

    ';'  shift, and go to state 15

    '('  reduce using rule 8 ($@1)

    $@1  go to state 16


State 10

   11 unq_declaration: type • ID

    ID  shift, and go to state 17


State 11

   56 type: type_lst •

    ID  reduce using rule 56 (type)


State 12

   57 type: type_number •
   58 type_lst: type_number • T_LIST

    T_LIST  shift, and go to state 18

    ID  reduce using rule 57 (type)


State 13

    0 $accept: program $end •

    $default  accept


State 14

    3 lst_declarations: declaration lst_declarations •

    $end  reduce using rule 3 (lst_declarations)


State 15

   10 var_declaration: unq_declaration ';' •

    $end     reduce using rule 10 (var_declaration)
    error    reduce using rule 10 (var_declaration)
    T_INT    reduce using rule 10 (var_declaration)
    T_FLOAT  reduce using rule 10 (var_declaration)


State 16

    9 func_declaration: unq_declaration $@1 • '(' parameters ')' '{' block_commands '}'

    '('  shift, and go to state 19


State 17

   11 unq_declaration: type ID •

    '('  reduce using rule 11 (unq_declaration)
    ';'  reduce using rule 11 (unq_declaration)


State 18

   58 type_lst: type_number T_LIST •

    ID  reduce using rule 58 (type_lst)


State 19

    9 func_declaration: unq_declaration $@1 '(' • parameters ')' '{' block_commands '}'

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    ')'  reduce using rule 13 (parameters)

    unq_declaration  go to state 20
    parameters       go to state 21
    lst_parameters   go to state 22
    type             go to state 150
    type_lst         go to state 11
    type_number      go to state 12


State 20

   14 lst_parameters: unq_declaration • ',' lst_parameters
   15               | unq_declaration •

    ','  shift, and go to state 23

    ')'  reduce using rule 15 (lst_parameters)


State 21

    9 func_declaration: unq_declaration $@1 '(' parameters • ')' '{' block_commands '}'

    ')'  shift, and go to state 24


State 22

   12 parameters: lst_parameters •

    ')'  reduce using rule 12 (parameters)


State 23

   14 lst_parameters: unq_declaration ',' • lst_parameters

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    unq_declaration  go to state 20
    lst_parameters   go to state 25
    type             go to state 150
    type_lst         go to state 11
    type_number      go to state 12


State 24

    9 func_declaration: unq_declaration $@1 '(' parameters ')' • '{' block_commands '}'

    '{'  shift, and go to state 26


State 25

   14 lst_parameters: unq_declaration ',' lst_parameters •

    ')'  reduce using rule 14 (lst_parameters)


State 26

    9 func_declaration: unq_declaration $@1 '(' parameters ')' '{' • block_commands '}'

    error           shift, and go to state 27
    NUM_INT         shift, and go to state 28
    NUM_FLOAT       shift, and go to state 29
    NIL_CNST        shift, and go to state 30
    ID              shift, and go to state 31
    RETURN_STM      shift, and go to state 32
    T_INT           shift, and go to state 2
    T_FLOAT         shift, and go to state 3
    IF_STMT         shift, and go to state 33
    FOR_STMT        shift, and go to state 34
    OUTPUT_WRITE    shift, and go to state 35
    OUTPUT_WRITELN  shift, and go to state 36
    INPUT_READ      shift, and go to state 37
    '+'             shift, and go to state 38
    '-'             shift, and go to state 39
    '%'             shift, and go to state 40
    '?'             shift, and go to state 41
    '!'             shift, and go to state 42

    '{'  reduce using rule 29 ($@2)

    var_declaration   go to state 43
    unq_declaration   go to state 44
    block_commands    go to state 45
    command           go to state 46
    $@2               go to state 47
    init_variable     go to state 48
    conditional_stmt  go to state 49
    return_stmt       go to state 50
    iteration         go to state 51
    init_stmt         go to state 52
    output            go to state 53
    input             go to state 54
    func_calling      go to state 55
    expression        go to state 56
    const             go to state 57
    number            go to state 58
    type              go to state 151
    type_lst          go to state 11
    type_number       go to state 12
    operation         go to state 59
    single_operation  go to state 60
    arith_binary      go to state 61
    arith_single      go to state 62
    lst_single        go to state 63
    lst_binary        go to state 64


State 27

   32 command: error •

    error           reduce using rule 32 (command)
    NUM_INT         reduce using rule 32 (command)
    NUM_FLOAT       reduce using rule 32 (command)
    NIL_CNST        reduce using rule 32 (command)
    ID              reduce using rule 32 (command)
    RETURN_STM      reduce using rule 32 (command)
    T_INT           reduce using rule 32 (command)
    T_FLOAT         reduce using rule 32 (command)
    IF_STMT         reduce using rule 32 (command)
    FOR_STMT        reduce using rule 32 (command)
    OUTPUT_WRITE    reduce using rule 32 (command)
    OUTPUT_WRITELN  reduce using rule 32 (command)
    INPUT_READ      reduce using rule 32 (command)
    '{'             reduce using rule 32 (command)
    '}'             reduce using rule 32 (command)
    '+'             reduce using rule 32 (command)
    '-'             reduce using rule 32 (command)
    '%'             reduce using rule 32 (command)
    '?'             reduce using rule 32 (command)
    '!'             reduce using rule 32 (command)


State 28

   54 number: NUM_INT •

    ';'         reduce using rule 54 (number)
    AND         reduce using rule 54 (number)
    OR          reduce using rule 54 (number)
    GREATER     reduce using rule 54 (number)
    GREATER_EQ  reduce using rule 54 (number)
    LESS        reduce using rule 54 (number)
    LESS_EQ     reduce using rule 54 (number)
    EQUAL       reduce using rule 54 (number)
    NOT_EQ      reduce using rule 54 (number)
    '+'         reduce using rule 54 (number)
    '-'         reduce using rule 54 (number)
    '*'         reduce using rule 54 (number)
    '/'         reduce using rule 54 (number)
    FILTER      reduce using rule 54 (number)
    MAP         reduce using rule 54 (number)
    ':'         reduce using rule 54 (number)


State 29

   55 number: NUM_FLOAT •

    ';'         reduce using rule 55 (number)
    AND         reduce using rule 55 (number)
    OR          reduce using rule 55 (number)
    GREATER     reduce using rule 55 (number)
    GREATER_EQ  reduce using rule 55 (number)
    LESS        reduce using rule 55 (number)
    LESS_EQ     reduce using rule 55 (number)
    EQUAL       reduce using rule 55 (number)
    NOT_EQ      reduce using rule 55 (number)
    '+'         reduce using rule 55 (number)
    '-'         reduce using rule 55 (number)
    '*'         reduce using rule 55 (number)
    '/'         reduce using rule 55 (number)
    FILTER      reduce using rule 55 (number)
    MAP         reduce using rule 55 (number)
    ':'         reduce using rule 55 (number)


State 30

   53 const: NIL_CNST •

    ';'         reduce using rule 53 (const)
    AND         reduce using rule 53 (const)
    OR          reduce using rule 53 (const)
    GREATER     reduce using rule 53 (const)
    GREATER_EQ  reduce using rule 53 (const)
    LESS        reduce using rule 53 (const)
    LESS_EQ     reduce using rule 53 (const)
    EQUAL       reduce using rule 53 (const)
    NOT_EQ      reduce using rule 53 (const)
    '+'         reduce using rule 53 (const)
    '-'         reduce using rule 53 (const)
    '*'         reduce using rule 53 (const)
    '/'         reduce using rule 53 (const)
    FILTER      reduce using rule 53 (const)
    MAP         reduce using rule 53 (const)
    ':'         reduce using rule 53 (const)


State 31

   39 init_stmt: ID • '=' operation
   47 func_calling: ID • '(' calling_parameters ')'
   51 expression: ID •

    '('  shift, and go to state 65
    '='  shift, and go to state 66

    ';'         reduce using rule 51 (expression)
    AND         reduce using rule 51 (expression)
    OR          reduce using rule 51 (expression)
    GREATER     reduce using rule 51 (expression)
    GREATER_EQ  reduce using rule 51 (expression)
    LESS        reduce using rule 51 (expression)
    LESS_EQ     reduce using rule 51 (expression)
    EQUAL       reduce using rule 51 (expression)
    NOT_EQ      reduce using rule 51 (expression)
    '+'         reduce using rule 51 (expression)
    '-'         reduce using rule 51 (expression)
    '*'         reduce using rule 51 (expression)
    '/'         reduce using rule 51 (expression)
    FILTER      reduce using rule 51 (expression)
    MAP         reduce using rule 51 (expression)
    ':'         reduce using rule 51 (expression)


State 32

   36 return_stmt: RETURN_STM • operation ';'

    NUM_INT    shift, and go to state 28
    NUM_FLOAT  shift, and go to state 29
    NIL_CNST   shift, and go to state 30
    ID         shift, and go to state 67
    '+'        shift, and go to state 38
    '-'        shift, and go to state 39
    '%'        shift, and go to state 40
    '?'        shift, and go to state 41
    '!'        shift, and go to state 42

    func_calling      go to state 55
    expression        go to state 56
    const             go to state 57
    number            go to state 58
    operation         go to state 68
    single_operation  go to state 60
    arith_binary      go to state 61
    arith_single      go to state 62
    lst_single        go to state 63
    lst_binary        go to state 64


State 33

   34 conditional_stmt: IF_STMT • '(' operation ')' command
   35                 | IF_STMT • '(' operation ')' command ELSE_STMT command

    '('  shift, and go to state 69


State 34

   37 iteration: FOR_STMT • '(' loop_condition ')' command

    '('  shift, and go to state 70


State 35

   42 output: OUTPUT_WRITE • '(' operation ')' ';'
   44       | OUTPUT_WRITE • '(' STRING ')' ';'

    '('  shift, and go to state 71


State 36

   43 output: OUTPUT_WRITELN • '(' operation ')' ';'
   45       | OUTPUT_WRITELN • '(' STRING ')' ';'

    '('  shift, and go to state 72


State 37

   46 input: INPUT_READ • '(' expression ')' ';'

    '('  shift, and go to state 73


State 38

   73 arith_single: '+' • expression

    NUM_INT    shift, and go to state 28
    NUM_FLOAT  shift, and go to state 29
    NIL_CNST   shift, and go to state 30
    ID         shift, and go to state 67
    '+'        shift, and go to state 38
    '-'        shift, and go to state 39
    '%'        shift, and go to state 40
    '?'        shift, and go to state 41
    '!'        shift, and go to state 42

    func_calling      go to state 55
    expression        go to state 74
    const             go to state 57
    number            go to state 58
    single_operation  go to state 60
    arith_single      go to state 62
    lst_single        go to state 63


State 39

   74 arith_single: '-' • expression

    NUM_INT    shift, and go to state 28
    NUM_FLOAT  shift, and go to state 29
    NIL_CNST   shift, and go to state 30
    ID         shift, and go to state 67
    '+'        shift, and go to state 38
    '-'        shift, and go to state 39
    '%'        shift, and go to state 40
    '?'        shift, and go to state 41
    '!'        shift, and go to state 42

    func_calling      go to state 55
    expression        go to state 75
    const             go to state 57
    number            go to state 58
    single_operation  go to state 60
    arith_single      go to state 62
    lst_single        go to state 63


State 40

   75 lst_single: '%' • expression

    NUM_INT    shift, and go to state 28
    NUM_FLOAT  shift, and go to state 29
    NIL_CNST   shift, and go to state 30
    ID         shift, and go to state 67
    '+'        shift, and go to state 38
    '-'        shift, and go to state 39
    '%'        shift, and go to state 40
    '?'        shift, and go to state 41
    '!'        shift, and go to state 42

    func_calling      go to state 55
    expression        go to state 76
    const             go to state 57
    number            go to state 58
    single_operation  go to state 60
    arith_single      go to state 62
    lst_single        go to state 63


State 41

   76 lst_single: '?' • expression

    NUM_INT    shift, and go to state 28
    NUM_FLOAT  shift, and go to state 29
    NIL_CNST   shift, and go to state 30
    ID         shift, and go to state 67
    '+'        shift, and go to state 38
    '-'        shift, and go to state 39
    '%'        shift, and go to state 40
    '?'        shift, and go to state 41
    '!'        shift, and go to state 42

    func_calling      go to state 55
    expression        go to state 77
    const             go to state 57
    number            go to state 58
    single_operation  go to state 60
    arith_single      go to state 62
    lst_single        go to state 63


State 42

   67 single_operation: '!' • expression

    NUM_INT    shift, and go to state 28
    NUM_FLOAT  shift, and go to state 29
    NIL_CNST   shift, and go to state 30
    ID         shift, and go to state 67
    '+'        shift, and go to state 38
    '-'        shift, and go to state 39
    '%'        shift, and go to state 40
    '?'        shift, and go to state 41
    '!'        shift, and go to state 42

    func_calling      go to state 55
    expression        go to state 78
    const             go to state 57
    number            go to state 58
    single_operation  go to state 60
    arith_single      go to state 62
    lst_single        go to state 63


State 43

   22 command: var_declaration •

    error           reduce using rule 22 (command)
    NUM_INT         reduce using rule 22 (command)
    NUM_FLOAT       reduce using rule 22 (command)
    NIL_CNST        reduce using rule 22 (command)
    ID              reduce using rule 22 (command)
    RETURN_STM      reduce using rule 22 (command)
    T_INT           reduce using rule 22 (command)
    T_FLOAT         reduce using rule 22 (command)
    IF_STMT         reduce using rule 22 (command)
    FOR_STMT        reduce using rule 22 (command)
    OUTPUT_WRITE    reduce using rule 22 (command)
    OUTPUT_WRITELN  reduce using rule 22 (command)
    INPUT_READ      reduce using rule 22 (command)
    '{'             reduce using rule 22 (command)
    '}'             reduce using rule 22 (command)
    '+'             reduce using rule 22 (command)
    '-'             reduce using rule 22 (command)
    '%'             reduce using rule 22 (command)
    '?'             reduce using rule 22 (command)
    '!'             reduce using rule 22 (command)


State 44

   10 var_declaration: unq_declaration • ';'

    ';'  shift, and go to state 152


State 45

    9 func_declaration: unq_declaration $@1 '(' parameters ')' '{' block_commands • '}'

    '}'  shift, and go to state 79


State 46

   20 block_commands: command • block_commands
   21               | command •

    error           shift, and go to state 27
    NUM_INT         shift, and go to state 28
    NUM_FLOAT       shift, and go to state 29
    NIL_CNST        shift, and go to state 30
    ID              shift, and go to state 31
    RETURN_STM      shift, and go to state 32
    T_INT           shift, and go to state 2
    T_FLOAT         shift, and go to state 3
    IF_STMT         shift, and go to state 33
    FOR_STMT        shift, and go to state 34
    OUTPUT_WRITE    shift, and go to state 35
    OUTPUT_WRITELN  shift, and go to state 36
    INPUT_READ      shift, and go to state 37
    '+'             shift, and go to state 38
    '-'             shift, and go to state 39
    '%'             shift, and go to state 40
    '?'             shift, and go to state 41
    '!'             shift, and go to state 42

    '{'  reduce using rule 29 ($@2)
    '}'  reduce using rule 21 (block_commands)

    var_declaration   go to state 43
    unq_declaration   go to state 44
    block_commands    go to state 80
    command           go to state 46
    $@2               go to state 47
    init_variable     go to state 48
    conditional_stmt  go to state 49
    return_stmt       go to state 50
    iteration         go to state 51
    init_stmt         go to state 52
    output            go to state 53
    input             go to state 54
    func_calling      go to state 55
    expression        go to state 56
    const             go to state 57
    number            go to state 58
    type              go to state 151
    type_lst          go to state 11
    type_number       go to state 12
    operation         go to state 59
    single_operation  go to state 60
    arith_binary      go to state 61
    arith_single      go to state 62
    lst_single        go to state 63
    lst_binary        go to state 64


State 47

   30 command: $@2 • '{' block_commands '}'

    '{'  shift, and go to state 81


State 48

   23 command: init_variable •

    error           reduce using rule 23 (command)
    NUM_INT         reduce using rule 23 (command)
    NUM_FLOAT       reduce using rule 23 (command)
    NIL_CNST        reduce using rule 23 (command)
    ID              reduce using rule 23 (command)
    RETURN_STM      reduce using rule 23 (command)
    T_INT           reduce using rule 23 (command)
    T_FLOAT         reduce using rule 23 (command)
    IF_STMT         reduce using rule 23 (command)
    FOR_STMT        reduce using rule 23 (command)
    OUTPUT_WRITE    reduce using rule 23 (command)
    OUTPUT_WRITELN  reduce using rule 23 (command)
    INPUT_READ      reduce using rule 23 (command)
    '{'             reduce using rule 23 (command)
    '}'             reduce using rule 23 (command)
    '+'             reduce using rule 23 (command)
    '-'             reduce using rule 23 (command)
    '%'             reduce using rule 23 (command)
    '?'             reduce using rule 23 (command)
    '!'             reduce using rule 23 (command)


State 49

   24 command: conditional_stmt •

    error           reduce using rule 24 (command)
    NUM_INT         reduce using rule 24 (command)
    NUM_FLOAT       reduce using rule 24 (command)
    NIL_CNST        reduce using rule 24 (command)
    ID              reduce using rule 24 (command)
    RETURN_STM      reduce using rule 24 (command)
    T_INT           reduce using rule 24 (command)
    T_FLOAT         reduce using rule 24 (command)
    IF_STMT         reduce using rule 24 (command)
    FOR_STMT        reduce using rule 24 (command)
    OUTPUT_WRITE    reduce using rule 24 (command)
    OUTPUT_WRITELN  reduce using rule 24 (command)
    INPUT_READ      reduce using rule 24 (command)
    '{'             reduce using rule 24 (command)
    '}'             reduce using rule 24 (command)
    '+'             reduce using rule 24 (command)
    '-'             reduce using rule 24 (command)
    '%'             reduce using rule 24 (command)
    '?'             reduce using rule 24 (command)
    '!'             reduce using rule 24 (command)


State 50

   25 command: return_stmt •

    error           reduce using rule 25 (command)
    NUM_INT         reduce using rule 25 (command)
    NUM_FLOAT       reduce using rule 25 (command)
    NIL_CNST        reduce using rule 25 (command)
    ID              reduce using rule 25 (command)
    RETURN_STM      reduce using rule 25 (command)
    T_INT           reduce using rule 25 (command)
    T_FLOAT         reduce using rule 25 (command)
    IF_STMT         reduce using rule 25 (command)
    FOR_STMT        reduce using rule 25 (command)
    OUTPUT_WRITE    reduce using rule 25 (command)
    OUTPUT_WRITELN  reduce using rule 25 (command)
    INPUT_READ      reduce using rule 25 (command)
    '{'             reduce using rule 25 (command)
    '}'             reduce using rule 25 (command)
    '+'             reduce using rule 25 (command)
    '-'             reduce using rule 25 (command)
    '%'             reduce using rule 25 (command)
    '?'             reduce using rule 25 (command)
    '!'             reduce using rule 25 (command)


State 51

   26 command: iteration •

    error           reduce using rule 26 (command)
    NUM_INT         reduce using rule 26 (command)
    NUM_FLOAT       reduce using rule 26 (command)
    NIL_CNST        reduce using rule 26 (command)
    ID              reduce using rule 26 (command)
    RETURN_STM      reduce using rule 26 (command)
    T_INT           reduce using rule 26 (command)
    T_FLOAT         reduce using rule 26 (command)
    IF_STMT         reduce using rule 26 (command)
    FOR_STMT        reduce using rule 26 (command)
    OUTPUT_WRITE    reduce using rule 26 (command)
    OUTPUT_WRITELN  reduce using rule 26 (command)
    INPUT_READ      reduce using rule 26 (command)
    '{'             reduce using rule 26 (command)
    '}'             reduce using rule 26 (command)
    '+'             reduce using rule 26 (command)
    '-'             reduce using rule 26 (command)
    '%'             reduce using rule 26 (command)
    '?'             reduce using rule 26 (command)
    '!'             reduce using rule 26 (command)


State 52

   33 init_variable: init_stmt • ';'

    ';'  shift, and go to state 82


State 53

   28 command: output •

    error           reduce using rule 28 (command)
    NUM_INT         reduce using rule 28 (command)
    NUM_FLOAT       reduce using rule 28 (command)
    NIL_CNST        reduce using rule 28 (command)
    ID              reduce using rule 28 (command)
    RETURN_STM      reduce using rule 28 (command)
    T_INT           reduce using rule 28 (command)
    T_FLOAT         reduce using rule 28 (command)
    IF_STMT         reduce using rule 28 (command)
    FOR_STMT        reduce using rule 28 (command)
    OUTPUT_WRITE    reduce using rule 28 (command)
    OUTPUT_WRITELN  reduce using rule 28 (command)
    INPUT_READ      reduce using rule 28 (command)
    '{'             reduce using rule 28 (command)
    '}'             reduce using rule 28 (command)
    '+'             reduce using rule 28 (command)
    '-'             reduce using rule 28 (command)
    '%'             reduce using rule 28 (command)
    '?'             reduce using rule 28 (command)
    '!'             reduce using rule 28 (command)


State 54

   27 command: input •

    error           reduce using rule 27 (command)
    NUM_INT         reduce using rule 27 (command)
    NUM_FLOAT       reduce using rule 27 (command)
    NIL_CNST        reduce using rule 27 (command)
    ID              reduce using rule 27 (command)
    RETURN_STM      reduce using rule 27 (command)
    T_INT           reduce using rule 27 (command)
    T_FLOAT         reduce using rule 27 (command)
    IF_STMT         reduce using rule 27 (command)
    FOR_STMT        reduce using rule 27 (command)
    OUTPUT_WRITE    reduce using rule 27 (command)
    OUTPUT_WRITELN  reduce using rule 27 (command)
    INPUT_READ      reduce using rule 27 (command)
    '{'             reduce using rule 27 (command)
    '}'             reduce using rule 27 (command)
    '+'             reduce using rule 27 (command)
    '-'             reduce using rule 27 (command)
    '%'             reduce using rule 27 (command)
    '?'             reduce using rule 27 (command)
    '!'             reduce using rule 27 (command)


State 55

   48 expression: func_calling •

    ';'         reduce using rule 48 (expression)
    AND         reduce using rule 48 (expression)
    OR          reduce using rule 48 (expression)
    GREATER     reduce using rule 48 (expression)
    GREATER_EQ  reduce using rule 48 (expression)
    LESS        reduce using rule 48 (expression)
    LESS_EQ     reduce using rule 48 (expression)
    EQUAL       reduce using rule 48 (expression)
    NOT_EQ      reduce using rule 48 (expression)
    '+'         reduce using rule 48 (expression)
    '-'         reduce using rule 48 (expression)
    '*'         reduce using rule 48 (expression)
    '/'         reduce using rule 48 (expression)
    FILTER      reduce using rule 48 (expression)
    MAP         reduce using rule 48 (expression)
    ':'         reduce using rule 48 (expression)


State 56

   72 arith_binary: expression •
   77 lst_binary: expression • FILTER expression
   78           | expression • MAP expression
   79           | expression • ':' expression

    FILTER  shift, and go to state 83
    MAP     shift, and go to state 84
    ':'     shift, and go to state 85

    ';'         reduce using rule 72 (arith_binary)
    AND         reduce using rule 72 (arith_binary)
    OR          reduce using rule 72 (arith_binary)
    GREATER     reduce using rule 72 (arith_binary)
    GREATER_EQ  reduce using rule 72 (arith_binary)
    LESS        reduce using rule 72 (arith_binary)
    LESS_EQ     reduce using rule 72 (arith_binary)
    EQUAL       reduce using rule 72 (arith_binary)
    NOT_EQ      reduce using rule 72 (arith_binary)
    '+'         reduce using rule 72 (arith_binary)
    '-'         reduce using rule 72 (arith_binary)
    '*'         reduce using rule 72 (arith_binary)
    '/'         reduce using rule 72 (arith_binary)


State 57

   50 expression: const •

    ';'         reduce using rule 50 (expression)
    AND         reduce using rule 50 (expression)
    OR          reduce using rule 50 (expression)
    GREATER     reduce using rule 50 (expression)
    GREATER_EQ  reduce using rule 50 (expression)
    LESS        reduce using rule 50 (expression)
    LESS_EQ     reduce using rule 50 (expression)
    EQUAL       reduce using rule 50 (expression)
    NOT_EQ      reduce using rule 50 (expression)
    '+'         reduce using rule 50 (expression)
    '-'         reduce using rule 50 (expression)
    '*'         reduce using rule 50 (expression)
    '/'         reduce using rule 50 (expression)
    FILTER      reduce using rule 50 (expression)
    MAP         reduce using rule 50 (expression)
    ':'         reduce using rule 50 (expression)


State 58

   52 const: number •

    ';'         reduce using rule 52 (const)
    AND         reduce using rule 52 (const)
    OR          reduce using rule 52 (const)
    GREATER     reduce using rule 52 (const)
    GREATER_EQ  reduce using rule 52 (const)
    LESS        reduce using rule 52 (const)
    LESS_EQ     reduce using rule 52 (const)
    EQUAL       reduce using rule 52 (const)
    NOT_EQ      reduce using rule 52 (const)
    '+'         reduce using rule 52 (const)
    '-'         reduce using rule 52 (const)
    '*'         reduce using rule 52 (const)
    '/'         reduce using rule 52 (const)
    FILTER      reduce using rule 52 (const)
    MAP         reduce using rule 52 (const)
    ':'         reduce using rule 52 (const)


State 59

   31 command: operation • ';'
   63 operation: operation • relational_op expression
   64          | operation • logical_op expression

    ';'         shift, and go to state 86
    AND         shift, and go to state 87
    OR          shift, and go to state 88
    GREATER     shift, and go to state 89
    GREATER_EQ  shift, and go to state 90
    LESS        shift, and go to state 91
    LESS_EQ     shift, and go to state 92
    EQUAL       shift, and go to state 93
    NOT_EQ      shift, and go to state 94
